--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
         </div>
         
         <div class="buttonDiv">
-            <button id="button" onclick="window.print()">Download</button>
+            <button id="button">Download</button>
         </div>
     </footer>
-    <!-- <script src="html2pdf.bundle.min.js"></script> -->
+    <script src="html2pdf.bundle.min.js"></script>
     <script src="script.js" defer></script>
 </body>
 </html>
