--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
                         s.jayeshchennai@gmail.com
                     </a>
                 </p>
-                <p><i class="fas fa-phone"></i>9600297767</p>
+                <p>
+                    <a href="tel:+919600297767"><i class="fas fa-phone"></i>9600297767
+                    </a>
+                </p>
             </div><hr>
             <div class="skills">
                 <h3><i class="fas fa-laptop-code"></i>Skills</h3>
