--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <i class="fab fa-linkedin"></i>
                     </div>
                 </a>
-                <a href="http://www.instagram.com/mern_stack_magician?r=nametag/" target="_blank" rel="noopener noreferrer">
+                <a href="http://www.instagram.com/_js_with_js_?r=nametag/" target="_blank" rel="noopener noreferrer">
                     <div>
                     <i class="fab fa-instagram"></i>
                     </div>
